# pai-llm-config

./: .gitignore  README.md  pyproject.toml
docs/: 01_design.md  02_config-spec.md  03_api-reference.md  04_architecture.md  05_roadmap.md  06_examples.md  07_mapping_guide.md
examples/config_templates/: 01_minimal.yaml  02_standard_with_aliases.yaml  04_advanced_logic.yaml  05_model_mapping.yaml
examples/config_templates/03_profile_payload/: llm-config-prod.yaml  llm-config.yaml
pai_llm_config/: __init__.py  config.py  loader.py  models.py  resolver.py
pai_llm_config/clients/: __init__.py  factory.py  streaming.py
pai_llm_config/keypool/: __init__.py  pool.py  strategies.py
tests/: test_config.py  test_dspy.py  test_factory.py  test_keypool.py  test_loader.py  test_model_aliases.py  test_models.py  test_params.py  test_resolver.py  test_routing.py  test_singleton.py  test_streaming.py
